# pigeon-post

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
postman-collection-serializer/: Cargo.toml
postman-collection-serializer/src/: lib.rs
postman-collection-serializer/src/structs/: body.rs  mod.rs  url.rs  utils.rs
postman-collection-serializer/test-data/: test-postman.json  test2-postman.json  test3-postman.json
runtime/: Cargo.toml
runtime/examples/: example-1.rs  test.postman_collection.json
runtime/src/: core.rs  lib.rs  structs.rs
