[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
postman-collection-serializer = {path = "../postman-collection-serializer"}
runtime = {path = "../runtime"}
tokio = "1.28.0"
